style: fix grid columns for horizontal scroll

--- a/mytabs/style.css
+++ b/mytabs/style.css
@@ -257,7 +257,7 @@ body.full {
 }
 body.full #tabs-wrapper,
 .tab-grid-wrapper {
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: auto;
   width: 100%;
   height: 100%;
@@ -266,19 +266,22 @@ body.full #tabs-wrapper,
   margin: 0 !important;
   padding: 0 !important;
 }
+
 body.full #tabs,
 .tab-grid {
   display: grid;
   position: relative;
-  width: 100%;
+  width: max-content;
+  grid-auto-flow: column;
+  grid-auto-columns: var(--tile-width);
   grid-auto-rows: max-content;
   gap: 0.4em;
-  grid-template-columns: repeat(auto-fill, minmax(var(--tile-width), 1fr));
   height: 100%;
   margin: 0 !important;
   padding: 0 !important;
   box-sizing: border-box;
 }
+
 body.full .tab,
 .tab-card {
   padding: 0 !important;
